fixing spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -744,7 +744,7 @@ button:focus,
           align-items: center;
   gap: 0.9375rem;
   min-height: 3.25rem;
-  padding: 0.75rem 1.375rem;
+  padding: 0.375rem 1.375rem;
 }
 .page__layout header .main-menu__toggle {
   display: none;
@@ -773,6 +773,12 @@ button:focus,
   top: 0;
   background-color: #fff;
   z-index: 998;
+}
+@media (max-width: 1024px) {
+  .page__layout > header {
+    -webkit-box-shadow: 0 2px 16px -5px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 2px 16px -5px rgba(0, 0, 0, 0.15);
+  }
 }
 @media (max-width: 480px) {
   .page__layout > header {
