--- a/sass/layout/_layout.sass
+++ b/sass/layout/_layout.sass
@@ -54,7 +54,7 @@
         align-items: center
         gap: rem(15px)
         min-height: rem(52px)
-        padding: rem(12px) rem(22px)
+        padding: rem(6px) rem(22px)
 
         // @media (min-width: 1024px)
         //     height: rem(72px)
@@ -80,6 +80,9 @@
         top: 0
         background-color: #fff
         z-index: 998
+
+        @media (max-width: 1024px)
+            box-shadow: 0 2px 16px -5px rgba(0, 0, 0, 0.15)
 
         @media (max-width: 480px)
             flex-wrap: wrap
